<resources>
    <string name="app_name">MarkAppProject</string>
    <string name="action_settings">Settings</string>
    <string name="marks_title">Marks</string>
    <string name="setting">设置</string>
    <string name="add">新增</string>
    <string name="back">返回</string>
    <string name="category">分类: </string>
    <string name="set_category">设置分类</string>
    <string name="add_category">添加分类</string>
    <string name="edit_category">请输入分类名</string>
    <string name="select_category">请选择分类</string>
    <string name="done">完成</string>
    <string name="mark_name">标记名: </string>
    <string name="date">日期: </string>
    <string name="take_photo">拍照</string>
    <string name="choose_photo">选取照片</string>
    <string name="stick">置顶: </string>
    <string name="delete">删除</string>
    <string name="content_hint">请输入内容</string>
    <string name="version">版本号:</string>
    <string name="version_content">1.0.0</string>
    <string name="developer">开发者:</string>
    <string name="developer_name">ShangJun</string>

</resources>
