<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <Button
            android:id="@+id/button_item_back"
            android:text="@string/back"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textView_label"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_item_done"
            android:text="@string/done"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ff0"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/mark_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/editText_title"
            android:layout_weight="4"
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_date"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_takePhoto"
            android:text="@string/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:id="@+id/button_choosePhoto"
            android:text="@string/choose_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_takePhoto"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <ImageView
            android:id="@+id/imageView_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/button_takePhoto"
            android:layout_toEndOf="@+id/button_takePhoto" />
        <TextView
            android:text="@string/stick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_alignTop="@+id/imageView_photo"
            android:layout_toRightOf="@+id/imageView_photo"
            android:layout_toEndOf="@+id/imageView_photo"
            android:layout_alignBottom="@+id/button_takePhoto"
            android:id="@+id/textView" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_top"
            android:layout_alignTop="@+id/imageView_photo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_weight="1"
            android:id="@+id/button_selectCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </Button>

    </LinearLayout>
    <EditText
        android:hint="@string/content_hint"
        android:id="@+id/editText_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxLines="10"
        android:gravity="start"
        android:layout_weight="0.8" />
<Button
    android:id="@+id/button_delete"
    android:text="@string/delete"
    android:textSize="18sp"
    android:textColor="#fff"
    android:background="#f00"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

</LinearLayout>